# efficacy_of_technical_indicators

./: .env  .gitignore  README.md  pyproject.toml
data_gathering_and_storage/: cleaning_and_preprocessing.py  generate_indicators.py  get_and_save_data.py
sql_scripts/: create_adx_daily_table.sql  create_atr_table.sql  create_bbands_daily_table.sql  create_ema_daily_table.sql  create_obv_daily_table.sql  create_ohlcv_daily_table.sql  create_vol_activity_daily_table.sql  setting_equities_values.sql  setting_ti_defs.sql
sql_scripts/create_tables/: creat_rsi_daily_table.sql  create_bbands_daily_table.sql  create_equities_table.sql  create_macd_daily_table.sql  create_sma_daily_table.sql  create_stoch_daily_table.sql  create_ti_db_user_and_set_privileges.sql  create_ti_definitions_table.sql
src/: utils.py
src/data_pipeline/: cleaning_and_preprocessing_ohlcv.py  generate_indicator_values.py  generate_target_values.py  get_and_save_ohlcv.py
src/eda/: feature_screening.py
src/feature_engineering/: common.py  generate_adx_features.py  generate_all_features.py  generate_atr_features.py  generate_bbands_features.py  generate_ema_features.py  generate_macd_features.py  generate_obv_features.py  generate_rsi_features.py  generate_sma_features.py  generate_stoch_features.py  generate_vol_roc_features.py
