[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "efficacy-of-technical-indicators"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "pandas-ta",
    "mysql-connector-python",
    "python-dotenv",
    "numpy",
    "yfinance",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
